[project]
name = "housing-prices"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "kaggle>=1.7.4.2",
    "matplotlib>=3.10.3",
    "missingno>=0.5.2",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
]
